Add TestPaymentWithRiverty